Fix no results row looking out of place in matching view

--- a/src/onegov.feriennet/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov.feriennet/onegov/feriennet/theme/styles/feriennet.scss
@@ -1003,6 +1003,16 @@ ul.tags {
         }
     }
 
+    .booking-none td {
+        font-style: italic;
+        padding-left: 2.75rem;
+        text-align: left !important;
+
+        span {
+            position: relative;
+        }
+    }
+
     .matching-details {
         display: inline-block;
         width: 75%;
